# TicTacToe

./: .gitignore  BuildSrc.cmd  CMakeLists.txt  CMakeLists_BACKUP_1620.txt  Play.command  main.cpp  ttt
.github/workflows/: build.yml
TicTacToe/: Interface.cpp  TicTacToe.sln  TicTacToe.vcxproj  TicTacToe.vcxproj.filters
TicTacToe.app/Contents/: Info.plist
TicTacToe.app/Contents/MacOS/: TicTacToe  run
include/: Example.hpp
src/: Driver.cpp  Driver.h  Example.cpp  Interface.cpp  Interface.h  Logic.cpp  main.cpp
ttt.dSYM/Contents/Resources/DWARF/: ttt
ttt.dSYM/Contents/Resources/Relocations/aarch64/: ttt.yml
